Editing the plugin loader to read plugin names from the config rather than file names.

--- a/config.conf.example
+++ b/config.conf.example
@@ -6,4 +6,6 @@ permitted_channels = ["gradiusbot", "general"]
 
 [Settings]
 bot_channel = gradiusbot
+public_plugins = ["dice.py", "giveabitch.py", "help.py", "help_channel_autodelete.py", "namecolor.py"]
+private_plugins = ["example.py"]
 
