--- a/config.conf.example
+++ b/config.conf.example
@@ -1,13 +1,14 @@
-[Discord]
-username =
+[Account]
+email =
 password =
-selfname = GradiusBot
-permitted_channels = ["gradiusbot", "general"]
 
-[Settings]
-bot_channel = gradiusbot
-public_plugins = ["dice.py", "giveabitch.py", "help.py", "help_channel_autodelete.py", "namecolor.py"]
-private_plugins = ["example.py"]
+[BotSettings]
+server_id =
+self_name =
+permitted_channels = []
+public_plugins = ["help.py", "sleep.py"]
+private_plugins = []
+bot_channel =
 
 [Loot]
 chest_min_currency = 10
