--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
+aiohttp==0.19.0
+chardet==2.3.0
 decorator==4.0.6
-discord.py==0.9.0
+discord.py==0.10.0-alpha
 ipython==4.0.1
 ipython-genutils==0.1.0
 path.py==8.1.2
 pexpect==4.0.1
 pickleshare==0.5
 ptyprocess==0.5
-requests==2.8.1
 simplegeneric==0.8.1
+termcolor==1.1.0
 traitlets==4.0.0
-ws4py==0.3.4
+urllib3==1.14
+websockets==2.7
+
