Adding some LoL related commands and random tips

--- a/config.conf.example
+++ b/config.conf.example
@@ -9,6 +9,7 @@ permitted_channels = []
 public_plugins = ["help.py", "sleep.py"]
 private_plugins = []
 bot_channel =
+lol_api =
 
 [Loot]
 chest_min_currency = 10
