--- a/config.conf.example
+++ b/config.conf.example
@@ -9,6 +9,7 @@ self_name =
 permitted_channels = []
 public_plugins = ["help.py", "sleep.py"]
 private_plugins = []
+event_plugins = []
 bot_channel =
 lol_api =
 twitter_alert =
