--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ aiohttp==0.19.0
 cassiopeia==0.0.10
 chardet==2.3.0
 decorator==4.0.6
-discord.py==0.10.0-alpha
 elasticsearch==2.1.0
 ipython==4.0.1
 ipython-genutils==0.1.0
@@ -17,3 +16,4 @@ traitlets==4.0.0
 twitter==1.17.1
 urllib3==1.14
 websockets==2.7
+git+https://github.com/Rapptz/discord.py@async
