cleaning up some old libraries

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,20 @@
-aiohttp==0.19.0
+aiohttp==0.21.6
 cassiopeia==0.1.1
 chardet==2.3.0
-git+https://github.com/Rapptz/discord.py@async
-decorator==4.0.9
+decorator==4.0.10
+discord.py==0.10.0
 elasticsearch==2.3.0
-ipython==4.1.2
+ipython==4.2.1
 ipython-genutils==0.1.0
-path.py==8.1.2
-pexpect==4.0.1
-pickleshare==0.6
+path.py==8.2.1
+pexpect==4.2.0
+pickleshare==0.7.2
+pkg-resources==0.0.0
 ptyprocess==0.5.1
 simplegeneric==0.8.1
-SQLAlchemy==1.0.12
+SQLAlchemy==1.0.13
 termcolor==1.1.0
-traitlets==4.2.1
+traitlets==4.2.2
 twitter==1.17.1
-urllib3==1.14
-websockets==3.0
+urllib3==1.16
+websockets==3.1
