--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,27 @@
-aiohttp==0.21.6
-cassiopeia==0.1.1
+aiohttp==1.0.5
+async-timeout==1.1.0
+cassiopeia==0.1.2
 chardet==2.3.0
 decorator==4.0.10
-discord.py==0.10.0
-elasticsearch==2.3.0
-ipython==4.2.1
+discord.py==0.14.3
+elasticsearch==5.0.1
+ipython==5.1.0
 ipython-genutils==0.1.0
+multidict==2.1.2
 path.py==8.2.1
-pexpect==4.2.0
-pickleshare==0.7.2
+pexpect==4.2.1
+pickleshare==0.7.4
+pkg-resources==0.0.0
+prompt-toolkit==1.0.8
 ptyprocess==0.5.1
+Pygments==2.1.3
 simplegeneric==0.8.1
-SQLAlchemy==1.0.13
+six==1.10.0
+SQLAlchemy==1.1.3
 termcolor==1.1.0
-traitlets==4.2.2
+traitlets==4.3.1
 twitter==1.17.1
-urllib3==1.16
-websockets==3.1
+urllib3==1.19
+wcwidth==0.1.7
+websockets==3.2
+yarl==0.5.3
