--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,29 @@
 aiohttp==1.0.5
+appdirs==1.4.0
 async-timeout==1.1.0
-cassiopeia==0.1.2
+cassiopeia==0.1.3
 chardet==2.3.0
-decorator==4.0.10
-discord.py==0.14.3
-elasticsearch==5.0.1
+decorator==4.0.11
+discord.py==0.16.5
+elasticsearch==5.1.0
 ipython==5.1.0
 ipython-genutils==0.1.0
-multidict==2.1.2
-path.py==8.2.1
+multidict==2.1.4
+packaging==16.8
+path.py==10.1
 pexpect==4.2.1
 pickleshare==0.7.4
 pkg-resources==0.0.0
-prompt-toolkit==1.0.8
+prompt-toolkit==1.0.9
 ptyprocess==0.5.1
-Pygments==2.1.3
+Pygments==2.2.0
+pyparsing==2.1.10
 simplegeneric==0.8.1
 six==1.10.0
-SQLAlchemy==1.1.3
+SQLAlchemy==1.1.5
 termcolor==1.1.0
 traitlets==4.3.1
-urllib3==1.19
+urllib3==1.20
 wcwidth==0.1.7
 websockets==3.2
-yarl==0.5.3
+yarl==0.8.1
