--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
 aiohttp==1.0.5
 appdirs==1.4.0
 async-timeout==1.1.0
+beautifulsoup4==4.6.0
+bs4==0.0.1
 cassiopeia==0.1.3
-chardet==2.3.0
+certifi==2017.4.17
+chardet==3.0.4
 decorator==4.0.11
 discord.py==0.16.5
 elasticsearch==5.1.0
+idna==2.5
 ipython==5.1.0
 ipython-genutils==0.1.0
 multidict==2.1.4
@@ -17,12 +21,13 @@ prompt-toolkit==1.0.9
 ptyprocess==0.5.1
 Pygments==2.2.0
 pyparsing==2.1.10
+requests==2.18.1
 simplegeneric==0.8.1
 six==1.10.0
 SQLAlchemy==1.1.5
 termcolor==1.1.0
 traitlets==4.3.1
-urllib3==1.20
+urllib3==1.21.1
 wcwidth==0.1.7
 websockets==3.2
 yarl==0.8.1
