--- a/config.conf.example
+++ b/config.conf.example
@@ -14,6 +14,7 @@ permitted_channels = []
 public_plugins = []
 private_plugins = []
 event_plugins = []
+scheduled_tasks = []
 statuses = ["PM me !help for more info", "@RiotGradius on Twitter", "status1", "status2"]
 bot_channel =
 alert_channel =
