--- a/config.conf.example
+++ b/config.conf.example
@@ -18,17 +18,9 @@ scheduled_tasks = []
 statuses = ["PM me !help for more info", "@RiotGradius on Twitter", "status1", "status2"]
 bot_channel =
 alert_channel =
-lol_api =
 
-[AdminSettings]
-mod_group =
-
-[developers]
-chance = 100
-permitted_channels = []
-
-[Steam]
-api =
+[Permissions]
+admin_group =
 
 [GeneralDiscussion]
 validation_post_url = http://www.google.com
@@ -36,3 +28,8 @@ validated_group = member
 not_validated_group = not_validated
 forum_location =
 forum_post =
+
+[Tournament]
+#provider_id = 1258
+provider_id = 648
+developer = True
