--- a/config.conf.example
+++ b/config.conf.example
@@ -15,25 +15,6 @@ public_plugins = []
 private_plugins = []
 event_plugins = []
 scheduled_tasks = []
-statuses = ["PM me !help for more info", "@RiotGradius on Twitter", "status1", "status2"]
+statuses = ["PM me !help for more info", "status1", "status2"]
 bot_channel =
 alert_channel =
-
-[Permissions]
-admin_group =
-
-[GeneralDiscussion]
-validation_post_url = http://www.google.com
-validated_group = member
-not_validated_group = not_validated
-forum_location =
-forum_post =
-
-[Tournament]
-provider_id =
-developer = True
-announce_channel =
-
-[RiotAPI]
-api_key =
-
