--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,12 @@ appdirs==1.4.0
 async-timeout==1.1.0
 beautifulsoup4==4.6.0
 bs4==0.0.1
+cassiopeia==0.1.3
 certifi==2017.4.17
 chardet==3.0.4
 decorator==4.0.11
 discord.py==0.16.5
-elasticsearch==5.1.0
+elasticsearch==6.1.1
 idna==2.5
 ipython==5.1.0
 ipython-genutils==0.1.0
@@ -16,6 +17,7 @@ packaging==16.8
 path.py==10.1
 pexpect==4.2.1
 pickleshare==0.7.4
+pkg-resources==0.0.0
 prompt-toolkit==1.0.9
 ptyprocess==0.5.1
 Pygments==2.2.0
@@ -26,7 +28,7 @@ six==1.10.0
 SQLAlchemy==1.1.5
 termcolor==1.1.0
 traitlets==4.3.1
-urllib3==1.21.1
+urllib3==1.22
 wcwidth==0.1.7
 websockets==3.2
 yarl==0.8.1
