--- a/config.conf.example
+++ b/config.conf.example
@@ -1,22 +1,2 @@
-[Account]
-is_user_account =
+[gradiusbot]
 token =
-username =
-password =
-
-[BotSettings]
-debug = False
-logfile = False
-elastic_logging = False
-server_id =
-self_name =
-public_plugins = []
-private_plugins = []
-event_plugins = []
-scheduled_tasks = []
-statuses = ["PM me !help for more info", "status1", "status2"]
-bot_channel =
-alert_channel =
-
-[Permissions]
-admin_group =
