--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,24 @@
-aiohttp==1.0.5
-appdirs==1.4.0
-async-timeout==1.1.0
-beautifulsoup4==4.6.0
-bs4==0.0.1
-cassiopeia==0.1.3
-certifi==2017.4.17
+aiohttp==2.2.5
+async-timeout==2.0.1
+backcall==0.1.0
 chardet==3.0.4
-decorator==4.0.11
-discord.py==0.16.5
-elasticsearch==6.1.1
-idna==2.5
-ipython==5.1.0
-ipython-genutils==0.1.0
-multidict==2.1.4
-packaging==16.8
-path.py==10.1
-pexpect==4.2.1
+decorator==4.3.0
+discord.py==1.0.0a1462+g60f0b22
+idna==2.6
+ipython==6.3.1
+ipython-genutils==0.2.0
+jedi==0.12.0
+multidict==4.2.0
+parso==0.2.0
+pexpect==4.5.0
 pickleshare==0.7.4
-prompt-toolkit==1.0.9
-ptyprocess==0.5.1
+pkg-resources==0.0.0
+prompt-toolkit==1.0.15
+ptyprocess==0.5.2
 Pygments==2.2.0
-pyparsing==2.1.10
-requests==2.18.1
 simplegeneric==0.8.1
-six==1.10.0
-SQLAlchemy==1.1.5
-termcolor==1.1.0
-traitlets==4.3.1
-urllib3==1.22
+six==1.11.0
+traitlets==4.3.2
 wcwidth==0.1.7
-websockets==3.2
-yarl==0.8.1
+websockets==3.4
+yarl==1.1.1
