Plugins are now separated into separate modules. Event plugins are now broken up.

--- a/config.conf.example
+++ b/config.conf.example
@@ -2,5 +2,6 @@
 token =
 public_plugins = []
 private_plugins = []
-event_plugins = []
 scheduled_tasks = []
+event_plugins.messages = []
+event_plugins.reactions = []
