working guild events

--- a/config.conf.example
+++ b/config.conf.example
@@ -6,3 +6,4 @@ scheduled_tasks = []
 event_plugins.messages = []
 event_plugins.reactions = []
 event_plugins.private = []
+event_plugins.guild = []
