working member events

--- a/config.conf.example
+++ b/config.conf.example
@@ -7,3 +7,4 @@ event_plugins.messages = []
 event_plugins.reactions = []
 event_plugins.private = []
 event_plugins.guild = []
+event_plugins.member = []
