--- a/config.conf.example
+++ b/config.conf.example
@@ -7,4 +7,6 @@ event_plugins.messages = []
 event_plugins.reactions = []
 event_plugins.private = []
 event_plugins.guild = []
+event_plugins.client = []
 event_plugins.member = []
+event_plugins.relationships = []
