working group events plugin setup.

--- a/config.conf.example
+++ b/config.conf.example
@@ -10,3 +10,4 @@ event_plugins.guild = []
 event_plugins.client = []
 event_plugins.member = []
 event_plugins.relationships = []
+event_plugins.group = []
