--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ async-timeout==2.0.1
 backcall==0.1.0
 chardet==3.0.4
 decorator==4.3.0
-discord.py==1.0.0a1462+g60f0b22
+git+https://github.com/Rapptz/discord.py@rewrite
 idna==2.6
 ipython==6.3.1
 ipython-genutils==0.2.0
