Streamer grouper changes and debug stuff

--- a/config.conf.example
+++ b/config.conf.example
@@ -1,5 +1,8 @@
 [gradiusbot]
 token =
+debug = False
+debug_channel = debug
+# Plugins
 public_plugins = []
 private_plugins = []
 scheduled_tasks = []
