updating required libs, changing gradiusbot.py to work

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,27 @@
-aiohttp==2.2.5
-async-timeout==2.0.1
+aiohttp==3.3.2
+async-timeout==3.0.0
+attrs==18.1.0
 backcall==0.1.0
 chardet==3.0.4
 decorator==4.3.0
-git+https://github.com/Rapptz/discord.py@rewrite
-idna==2.6
-ipython==6.3.1
+git+https://github.com/Rapptz/discord.py@69ca675ca057f8bbd961562eefced97026e5d671
+idna==2.7
+idna-ssl==1.1.0
+ipython==6.4.0
 ipython-genutils==0.2.0
-jedi==0.12.0
-multidict==4.2.0
-parso==0.2.0
-pexpect==4.5.0
+jedi==0.12.1
+multidict==4.3.1
+parso==0.3.1
+pexpect==4.6.0
 pickleshare==0.7.4
 pkg-resources==0.0.0
-prompt-toolkit==1.0.15
-ptyprocess==0.5.2
+prompt-toolkit==2.0.3
+ptyprocess==0.6.0
 Pygments==2.2.0
 simplegeneric==0.8.1
 six==1.11.0
+SQLAlchemy==1.2.10
 traitlets==4.3.2
 wcwidth==0.1.7
-websockets==3.4
-yarl==1.1.1
+websockets==6.0
+yarl==1.2.6
