--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,6 @@ attrs==18.1.0
 backcall==0.1.0
 chardet==3.0.4
 decorator==4.3.0
-discord.py==1.0.0a1493+g69ca675
 idna==2.7
 idna-ssl==1.1.0
 ipython==7.1.1
@@ -25,3 +24,4 @@ traitlets==4.3.2
 wcwidth==0.1.7
 websockets==6.0
 yarl==1.2.6
+-e git+https://github.com/Rapptz/discord.py@3f06f247c039a23948e7bb0014ea31db533b4ba2#egg=discord.py
