--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ attrs==18.1.0
 backcall==0.1.0
 chardet==3.0.4
 decorator==4.3.0
+discord.py==1.0.0a1493+g69ca675
+elasticsearch==6.3.1
 idna==2.7
 idna-ssl==1.1.0
 ipython==7.1.1
@@ -14,14 +16,15 @@ parso==0.3.1
 pexpect==4.6.0
 pickleshare==0.7.4
 pkg-resources==0.0.0
+prettytable==0.7.2
 prompt-toolkit==2.0.3
 ptyprocess==0.6.0
 Pygments==2.2.0
 simplegeneric==0.8.1
 six==1.11.0
-SQLAlchemy==1.2.10
+SQLAlchemy==1.3.3
 traitlets==4.3.2
+urllib3==1.24.1
 wcwidth==0.1.7
 websockets==6.0
 yarl==1.2.6
--e git+https://github.com/Rapptz/discord.py@3f06f247c039a23948e7bb0014ea31db533b4ba2#egg=discord.py
