--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ attrs==18.1.0
 backcall==0.1.0
 chardet==3.0.4
 decorator==4.3.0
-discord.py==1.0.0a1493+g69ca675
-elasticsearch==6.3.1
+discord.py==1.0.1
+elasticsearch==7.0.0
 idna==2.7
 idna-ssl==1.1.0
 ipython==7.1.1
@@ -16,15 +16,15 @@ parso==0.3.1
 pexpect==4.6.0
 pickleshare==0.7.4
 pkg-resources==0.0.0
-prettytable==0.7.2
 prompt-toolkit==2.0.3
 ptyprocess==0.6.0
 Pygments==2.2.0
 simplegeneric==0.8.1
 six==1.11.0
-SQLAlchemy==1.3.3
+SQLAlchemy==1.2.10
 traitlets==4.3.2
-urllib3==1.25.1
+typing-extensions==3.7.2
+urllib3==1.25.2
 wcwidth==0.1.7
 websockets==6.0
 yarl==1.2.6
