--- a/requirements.txt
+++ b/requirements.txt
@@ -16,12 +16,13 @@ parso==0.3.1
 pexpect==4.6.0
 pickleshare==0.7.4
 pkg-resources==0.0.0
+prettytable==0.7.2
 prompt-toolkit==2.0.3
 ptyprocess==0.6.0
 Pygments==2.2.0
 simplegeneric==0.8.1
 six==1.11.0
-SQLAlchemy==1.2.10
+SQLAlchemy==1.3.3
 traitlets==4.3.2
 typing-extensions==3.7.2
 urllib3==1.25.2
