--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-aiohttp==3.3.2
+aiohttp==3.6.2
 async-timeout==3.0.0
 attrs==18.1.0
 backcall==0.1.0
 chardet==3.0.4
 decorator==4.3.0
-discord.py==1.2.5
+discord.py==1.3.2
 elasticsearch==7.0.0
 idna==2.7
 idna-ssl==1.1.0
 ipython==7.1.1
 ipython-genutils==0.2.0
 jedi==0.12.1
-multidict==4.3.1
+multidict==4.7.5
 parso==0.3.1
 pexpect==4.6.0
 pickleshare==0.7.4
@@ -23,6 +23,7 @@ Pygments==2.2.0
 simplegeneric==0.8.1
 six==1.11.0
 SQLAlchemy==1.3.3
+tabulate==0.8.7
 traitlets==4.3.2
 typing-extensions==3.7.2
 urllib3==1.25.2
