--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ aiohttp==3.6.2
 async-timeout==3.0.0
 attrs==18.1.0
 backcall==0.1.0
+certifi==2019.11.28
 chardet==3.0.4
 decorator==4.3.0
 discord.py==1.3.2
@@ -19,6 +20,8 @@ prettytable==0.7.2
 prompt-toolkit==2.0.3
 ptyprocess==0.6.0
 Pygments==2.2.0
+pytz==2019.3
+requests==2.23.0
 simplegeneric==0.8.1
 six==1.11.0
 SQLAlchemy==1.3.3
