--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ prettytable==0.7.2
 prompt-toolkit==2.0.3
 ptyprocess==0.6.0
 Pygments==2.2.0
+python-json-logger==0.1.11
 pytz==2019.3
 requests==2.23.0
 simplegeneric==0.8.1
