--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,53 @@
 aiohttp==3.6.2
-async-timeout==3.0.0
-attrs==18.1.0
-backcall==0.1.0
-certifi==2019.11.28
+appdirs==1.4.4
+async-timeout==3.0.1
+attrs==20.2.0
+backcall==0.2.0
+CacheControl==0.12.6
+certifi==2020.6.20
 chardet==3.0.4
-decorator==4.3.0
-discord.py==1.3.4
-elasticsearch==7.0.0
-idna==2.7
+colorama==0.4.3
+contextlib2==0.6.0.post1
+decorator==4.4.2
+discord.py==1.4.1
+distlib==0.3.1
+distro==1.5.0
+elasticsearch==7.9.1
+html5lib==1.1
+idna==2.10
 idna-ssl==1.1.0
-ipython==7.1.1
+ipaddr==2.2.0
+ipython==7.18.1
 ipython-genutils==0.2.0
-jedi==0.12.1
-multidict==4.7.5
-parso==0.3.1
-pexpect==4.6.0
-pickleshare==0.7.4
+jedi==0.17.2
+lockfile==0.12.2
+msgpack==1.0.0
+multidict==4.7.6
+packaging==20.4
+parso==0.8.0
+pep517==0.8.2
+pexpect==4.8.0
+pickleshare==0.7.5
+pkg-resources==0.0.0
 prettytable==0.7.2
-prompt-toolkit==2.0.3
+progress==1.5
+prompt-toolkit==3.0.7
 ptyprocess==0.6.0
-Pygments==2.2.0
+Pygments==2.7.1
+pyparsing==2.4.7
 python-json-logger==0.1.11
-pytz==2019.3
-requests==2.23.0
+pytoml==0.1.21
+pytz==2020.1
+requests==2.24.0
+retrying==1.3.3
 simplegeneric==0.8.1
-six==1.11.0
-SQLAlchemy==1.3.3
+six==1.15.0
+SQLAlchemy==1.3.19
 tabulate==0.8.7
-traitlets==4.3.2
-typing-extensions==3.7.2
-urllib3==1.25.2
-wcwidth==0.1.7
-websockets==6.0
-yarl==1.2.6
+traitlets==5.0.4
+typing-extensions==3.7.4.3
+urllib3==1.25.10
+wcwidth==0.2.5
+webencodings==0.5.1
+websockets==8.1
+yarl==1.5.1
