--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,70 @@
 aiohttp==3.6.2
+airtable-python-wrapper==0.15.0
+appdirs==1.4.4
 async-timeout==3.0.0
 attrs==18.1.0
 backcall==0.1.0
+CacheControl==0.12.6
+cachetools==4.1.1
 certifi==2019.11.28
 chardet==3.0.4
+colorama==0.4.3
+contextlib2==0.6.0.post1
 decorator==4.3.0
 discord.py==1.3.4
+distlib==0.3.1
+distro==1.5.0
 elasticsearch==7.0.0
+google-api-core==1.22.4
+google-auth==1.22.1
+google-cloud-vision==2.0.0
+googleapis-common-protos==1.52.0
+grpcio==1.32.0
+html5lib==1.1
 idna==2.7
 idna-ssl==1.1.0
+ipaddr==2.2.0
 ipython==7.1.1
 ipython-genutils==0.2.0
 jedi==0.12.1
+libcst==0.3.12
+lockfile==0.12.2
+msgpack==1.0.0
 multidict==4.7.5
+mypy-extensions==0.4.3
+packaging==20.4
 parso==0.3.1
+pep517==0.8.2
 pexpect==4.6.0
 pickleshare==0.7.4
+Pillow==7.2.0
+pkg-resources==0.0.0
 prettytable==0.7.2
+progress==1.5
 prompt-toolkit==2.0.3
+proto-plus==1.10.0
+protobuf==3.13.0
 ptyprocess==0.6.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 Pygments==2.2.0
+pyparsing==2.4.7
+python-json-logger==0.1.11
+pytoml==0.1.21
 pytz==2019.3
+PyYAML==5.3.1
 requests==2.23.0
+retrying==1.3.3
+rsa==4.6
 simplegeneric==0.8.1
-six==1.11.0
+six==1.15.0
 SQLAlchemy==1.3.3
 tabulate==0.8.7
 traitlets==4.3.2
-typing-extensions==3.7.2
+typing-extensions==3.7.4.3
+typing-inspect==0.6.0
 urllib3==1.25.2
 wcwidth==0.1.7
+webencodings==0.5.1
 websockets==6.0
 yarl==1.2.6
