--- a/requirements.txt
+++ b/requirements.txt
@@ -1,69 +1,23 @@
-aiohttp==3.6.2
-airtable-python-wrapper==0.15.1
-appdirs==1.4.4
+aiohttp==3.7.4.post0
 async-timeout==3.0.1
-attrs==20.2.0
+attrs==21.2.0
 backcall==0.2.0
-CacheControl==0.12.6
-cachetools==4.1.1
-certifi==2020.6.20
-chardet==3.0.4
-colorama==0.4.3
-contextlib2==0.6.0.post1
-decorator==4.4.2
-discord.py==1.5.0
-distlib==0.3.1
-distro==1.5.0
-elasticsearch==7.9.1
-google-api-core==1.22.4
-google-auth==1.22.1
-google-cloud-vision==2.0.0
-googleapis-common-protos==1.52.0
-grpcio==1.32.0
-html5lib==1.1
-idna==2.10
-idna-ssl==1.1.0
-ipaddr==2.2.0
-ipython==7.18.1
+chardet==4.0.0
+decorator==5.0.9
+discord.py==2.0.0a3163+gf321efd4
+idna==3.1
+ipython==7.24.0
 ipython-genutils==0.2.0
-jedi==0.17.2
-libcst==0.3.12
-lockfile==0.12.2
-msgpack==1.0.0
-multidict==4.7.6
-mypy-extensions==0.4.3
-packaging==20.4
-parso==0.8.0
-pep517==0.8.2
+jedi==0.18.0
+matplotlib-inline==0.1.2
+multidict==5.1.0
+parso==0.8.2
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==7.2.0
-prettytable==1.0.0
-progress==1.5
-prompt-toolkit==3.0.7
-proto-plus==1.10.0
-protobuf==3.13.0
-ptyprocess==0.6.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-Pygments==2.7.1
-pyparsing==2.4.7
-python-json-logger==2.0.0
-pytoml==0.1.21
-pytz==2020.1
-PyYAML==5.3.1
-requests==2.24.0
-retrying==1.3.3
-rsa==4.6
-simplegeneric==0.8.1
-six==1.15.0
-SQLAlchemy==1.3.19
-tabulate==0.8.7
-traitlets==5.0.4
-typing-extensions==3.7.4.3
-typing-inspect==0.6.0
-urllib3==1.25.10
+prompt-toolkit==3.0.18
+ptyprocess==0.7.0
+Pygments==2.9.0
+traitlets==5.0.5
+typing-extensions==3.10.0.0
 wcwidth==0.2.5
-webencodings==0.5.1
-websockets==8.1
-yarl==1.6.0
+yarl==1.6.3
