--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,11 @@ aiohttp==3.7.4.post0
 async-timeout==3.0.1
 attrs==21.2.0
 backcall==0.2.0
+certifi==2020.12.5
 chardet==4.0.0
+click==8.0.1
 decorator==5.0.9
-discord.py==2.0.0a3163+gf321efd4
-idna==3.1
+idna==2.10
 ipython==7.24.0
 ipython-genutils==0.2.0
 jedi==0.18.0
@@ -17,7 +18,9 @@ pickleshare==0.7.5
 prompt-toolkit==3.0.18
 ptyprocess==0.7.0
 Pygments==2.9.0
+requests==2.25.1
 traitlets==5.0.5
 typing-extensions==3.10.0.0
+urllib3==1.26.5
 wcwidth==0.2.5
 yarl==1.6.3
