--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ certifi==2020.12.5
 chardet==4.0.0
 click==8.0.1
 decorator==5.0.9
-discord.py==2.0.0a3350+g3d0dd5bc
+git+https://github.com/Rapptz/discord.py.git@master
 greenlet==1.1.0
 idna==2.10
 ipython==7.24.0
