--- a/requirements.txt
+++ b/requirements.txt
@@ -24,11 +24,12 @@ html5lib==1.1
 idna==2.10
 idna-ssl==1.1.0
 ipaddr==2.2.0
-ipython==7.18.1
+ipython==7.28.0
 ipython-genutils==0.2.0
-jedi==0.17.2
+jedi==0.18.0
 libcst==0.3.12
 lockfile==0.12.2
+matplotlib-inline==0.1.3
 msgpack==1.0.0
 multidict==4.7.6
 mypy-extensions==0.4.3
@@ -59,6 +60,7 @@ simplegeneric==0.8.1
 six==1.15.0
 SQLAlchemy==1.3.19
 tabulate==0.8.7
+toml==0.10.2
 traitlets==5.0.4
 typing-extensions==3.7.4.3
 typing-inspect==0.6.0
