pinning python image to 3.8

--- a/k8s/tim/tim_pod.yaml
+++ b/k8s/tim/tim_pod.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   containers:
     - name: tim
-      image: gradiuscypher/tim:arm64
+      image: gradiuscypher/tim:test
       imagePullPolicy: Always
       volumeMounts:
         - name: config-vol
